--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "recharts": "^2.5.0",
     "styled-components": "^5.2.0",
     "web-vitals": "^0.2.4"
   },
